2002-12-15  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c:
	* gtk/gtkfilesel.c:
	* gtk/gtkfontsel.c:
	* gtk/gtkhruler.c:
	* gtk/gtkinputdialog.c:
	* gtk/gtkprogress.c:
	* gtk/gtktreemodel.c:
	* gtk/gtkvruler.c:
	* gtk/queryimmodules.c:
	* gtk/theme-bits/decompose-bits.c:
	* gdk-pixbuf/gdk-pixbuf-csource.c:
	* gdk-pixbuf/make-inline-pixbuf.c:
	* gdk-pixbuf/queryloaders.c:
	* gdk/gdkkeynames.c:
	* gdk/gdkrgb.c:
	* gdk/linux-fb/gdkfbmanager.c:
	* gdk/win32/gdkevents-win32.c:
	* gdk/win32/gdkmain-win32.c:
	* gdk/win32/gdkproperty-win32.c:
	* gdk/x11/gdkmain-x11.c: Use g_printf instead of system 
	printf.  (#99327)  

	* gtk/gtkcontainer.c (gtk_container_class_install_child_property): 
	(gtk_container_child_get_valist): 
	(gtk_container_child_get_property): 
	(gtk_container_child_set_valist): 
	(gtk_container_child_set_property): 
	(gtk_container_add_with_properties): 
	(gtk_container_child_set): 
	(gtk_container_child_get): Add docs.

	* gtk/gtkwindow.c (gtk_window_activate_default): 
	(gtk_window_activate_focus): Add docs.

2002-12-14  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkmenuitem.c (gtk_menu_item_position_menu): Made
	Xinerama-aware.  (#85711)

Sat Dec 14 14:19:16 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c: Add a new binding signal, "move_scroll",
	and use it to hook up Home/End/Page_Up/Page_Down keybindings.
	(#80484, Narayana Pattipati, Marius Andreiana)

	* gtk/gtkmenu.c (gtk_menu_scroll_item_visible): Fix some
	bugs in the computation of when an item is visible. (#99545)
	
	* gtk/gtkbindings.[ch] (_gtk_binding_signal_new) gtk/gtkmenushell.c:
	Move here, export privately.

	* gtk/gtkmenushell.c (_gtk_menu_shell_select_last): Export
	privately.

	* gtk/gtkmenushell.c (gtk_menu_shell_select_item): Don't
	select the item if it is already selected.

Sat Dec 14 01:51:05 2002  Chema Celorio  <chema@celorio.com>

	* gtk/gtkdialog.c (gtk_dialog_add_buttons_valist): minor coding
	style fix.
